--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
